chg: tidy up code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,9 @@ include_directories(src)
 add_executable(n64raymarcher
         src/main.cpp
         src/text.cpp
-        src/miMemory.cpp
-        src/demos/demoRepeat.cpp
-        src/demos/demoSync.cpp
         src/rdp/rdp.h
         src/rdp/rdp.cpp
-        src/demos/demoVI.cpp
-        src/demos/demoVIPong.cpp
-        src/demos/raymarch.cpp)
+        src/raymarch.cpp
+        src/math.cpp)
 
 set_property(TARGET n64raymarcher PROPERTY CXX_STANDARD 23)
